--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "@supabase/supabase-js": "^2.49.1",
+    "framer-motion": "^12.23.12",
     "next": "15.4.6",
-    "@supabase/supabase-js": "^2.49.1"
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "typescript": "^5",
